fix(core/datetime-picker): improve responsiveness on small screens (#1558)

--- a/packages/core/src/components/date-dropdown/date-dropdown.scss
+++ b/packages/core/src/components/date-dropdown/date-dropdown.scss
@@ -42,6 +42,5 @@
 
   .pull-right {
     float: right;
-    padding: $tiny-space $default-space;
-  }
+    padding: 0 $default-space $medium-space $default-space;  }
 }
